--- a/src/components/confirmation-modal/confirmationModal.css
+++ b/src/components/confirmation-modal/confirmationModal.css
@@ -1,4 +1,13 @@
-#gena {
+.modal-titl {
+  margin-top: 25px;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 34px;
+  color: #393333;
+}
+.gena {
   border: 0.5px solid #0056b3;
   /* box-sizing: border-box; */
   filter: drop-shadow(0px 2px 2px rgba(181, 8, 65, 0.08));
@@ -9,11 +18,12 @@
   font-weight: 600;
   font-size: 20px;
   line-height: 14px;
+  margin: 25px;
   /* background-color: #ffffff; */
 
   color: #0056b3;
 }
-#gena:hover {
+.gena:hover {
   background-color: #0056b3;
   color: #ffffff;
 }
