edit alert modal, more-details modal, billboard form and bug fixes

--- a/src/components/billboards-table/billboard-table.css
+++ b/src/components/billboards-table/billboard-table.css
@@ -1,6 +1,9 @@
 table tbody {
   background-color: white;
 }
+.table {
+  margin-bottom: 0.5rem;
+}
 .billboard-table {
   /* overflow: scroll; */
   width: 100%;
