--- a/src/components/alert-modal/alertModal.css
+++ b/src/components/alert-modal/alertModal.css
@@ -1,1 +1,13 @@
+.alerter {
+  width: 295px;
+  height: 34px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 34px;
 
+  color: #393333;
+}
+.adesw {
+  margin: 40px;
+}
