--- a/src/components/more-details/more-details.css
+++ b/src/components/more-details/more-details.css
@@ -1,29 +1,32 @@
-.more-details-container{
-    border: 1px solid chocolate;
-    /* padding: 5rem; */
-    margin: 0 -2rem;
+.dayo {
+  background-color: #0056b3;
+  color: white;
+  margin: 5px 0 10px;
+  width: 426px;
+  height: 44px;
+  box-shadow: 0px 2px 2px rgba(0, 86, 179, 0.1);
+  border-radius: 10px;
+  padding: 10px 18px 0 18px;
+  font-size: 15px;
 }
-
-.billboard-img-area {
-    border: 1px solid green;
-    display: flex;
-    flex-flow: row wrap;
+.dayo-add {
+  margin: 0;
+  font-size: 11px;
 }
-/* .billboard-img-area > * {
-    border: 1px solid blue;
-} */
-.billboard-img-area > p:first-child {
-    flex-basis: 100%;
+.lolo {
+  width: 426px;
+  height: 233px;
+  /* border: 0.5px solid #0056b3; */
+  box-sizing: border-box;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-bottom: 1rem;
 }
-
-.billboard-img-area > .left-width {
-    flex-basis: 25%;
-    align-self: center;
-}
-.billboard-img-area > .billboard-image-container {
-    flex-basis: 65%;
-}
-
-.billboard-image-container > img{
-    width: 100%;
+.more-details-header {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 26px;
+  color: #0056b3;
 }
