--- a/src/components/vertical-center-modal/vertical-center-modal.css
+++ b/src/components/vertical-center-modal/vertical-center-modal.css
@@ -1,40 +1,40 @@
 .vertical-modal {
-    padding: 0 2rem;
-    background: #FFFFFF;
-    box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
-    border-radius: 10px;
-    text-align: center;
+  padding: 0 2rem;
+  background: #ffffff;
+  box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
+  border-radius: 10px;
+  text-align: center;
 }
 
 .modal-close-btn {
-    color: #000;
-    /* border: 1px solid rebeccapurple; */
-    margin-left: auto;
-    font-size: 1.556rem;
-    transition: all 0.3s linear;
-    cursor: pointer;
+  color: #000;
+  /* border: 1px solid rebeccapurple; */
+  margin-left: auto;
+  font-size: 1.556rem;
+  transition: all 0.3s linear;
+  cursor: pointer;
 }
 .modal-close-btn:hover {
-    transform: rotate(360deg);
+  transform: rotate(360deg);
 }
 
 .modal-heading {
-    font-family: 'Raleway';
-    margin-top: -1.35rem;
-    margin-bottom: 1.7rem;
-    color: #0056B3;
-    height: 30px;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 26px;
-    /* line-height: 30px; */
-    /* text-transform: capitalize; */
-    /* border: 1px solid yellow; */
+  font-family: 'Raleway';
+  margin-top: -1.35rem;
+  margin-bottom: 1.7rem;
+  color: #0056b3;
+  height: 30px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 26px;
+  /* line-height: 30px; */
+  /* text-transform: capitalize; */
+  /* border: 1px solid yellow; */
 }
-.form-control{
-    height: 60px;
-    /* opacity: 0.5; */
-border: 0.5px solid #000000;
-filter: drop-shadow(0px 2px 2px rgba(181, 8, 65, 0.08));
-border-radius: 10px;
+.form-control {
+  height: 60px;
+  /* opacity: 0.5; */
+  border: 0.5px solid #000000;
+  filter: drop-shadow(0px 2px 2px rgba(181, 8, 65, 0.08));
+  border-radius: 10px;
 }
