--- a/src/components/more-details/more-details.css
+++ b/src/components/more-details/more-details.css
@@ -3,7 +3,7 @@
   color: white;
   margin: 5px 0 10px;
   width: 426px;
-  height: 44px;
+  /* height: 44px; */
   box-shadow: 0px 2px 2px rgba(0, 86, 179, 0.1);
   border-radius: 10px;
   padding: 10px 18px 0 18px;
