--- a/src/components/vertical-center-modal/vertical-center-modal.css
+++ b/src/components/vertical-center-modal/vertical-center-modal.css
@@ -1,9 +1,17 @@
-.vertical-modal {
-  padding: 0 2rem;
+.vertical-modal,
+.vertical-modal-user-profile {
+  /* padding: 0 2rem; */
   background: #ffffff;
   box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
   border-radius: 10px;
   text-align: center;
+  margin: 0 auto;
+}
+.vertical-modal-others {
+  width: 575px;
+}
+.vertical-modal-body {
+  margin: 0 3rem;
 }
 
 .modal-close-btn {
