enable removal of alert popup after 3000ms

--- a/src/components/alert-modal/alertModal.css
+++ b/src/components/alert-modal/alertModal.css
@@ -5,8 +5,8 @@
   font-weight: 600;
   font-size: 24px;
   line-height: 34px;
-
   color: #393333;
+  margin-bottom: 1rem;
 }
 .adesw {
   margin: 40px;
