--- a/src/components/billboard-visualization/billboard-visualization.css
+++ b/src/components/billboard-visualization/billboard-visualization.css
@@ -66,7 +66,7 @@
   background: #0056b3;
   box-shadow: 0px 4px 4px rgba(0, 86, 179, 0.1);
   border-radius: 6px;
-  height: 130px;
+  /* height: 130px; */
 }
 .lagos {
   height: 423px;
@@ -109,8 +109,8 @@
   border: 0.3px solid #0057b3;
   box-shadow: 0px 4px 4px rgba(0, 86, 179, 0.1);
   border-radius: 6px;
-  height: 130px;
+  /* height: 130px; */
   text-align: center;
-  margin-bottom: 0.5rem;
+  /* margin-bottom: 0.5rem; */
   margin-right: 1rem;
 }
