--- a/src/components/billboard-visualization/billboard-visualization.css
+++ b/src/components/billboard-visualization/billboard-visualization.css
@@ -69,7 +69,7 @@
   /* height: 130px; */
 }
 .lagos {
-  height: 423px;
+  /* height: 423px; */
   background: #ffffff;
   border: 0.3px solid rgba(0, 86, 179, 0.5);
   box-sizing: border-box;
@@ -113,4 +113,9 @@
   text-align: center;
   /* margin-bottom: 0.5rem; */
   margin-right: 1rem;
+}
+.sttates {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
