--- a/src/components/billboards-table/billboard-table.css
+++ b/src/components/billboards-table/billboard-table.css
@@ -134,3 +134,18 @@ table th:last-child {
 .vacant {
   color: #24f25e;
 }
+
+.table-loading {
+  /* border: 1px solid green; */
+  height: 70vh;
+ 
+}
+.table-loading > td {
+  /* border: 1px solid yellow; */
+  text-align: center;
+}
+
+.table-loading > td > div {
+  /* border: 1px solid green; */
+  margin-top: 25%;
+}
