--- a/src/components/billboard-visualization/billboard-visualization.css
+++ b/src/components/billboard-visualization/billboard-visualization.css
@@ -1,7 +1,8 @@
 .digital {
   margin: 0 1rem 0.5rem 0;
 }
-.static {
+.static,
+.seconder {
   margin: 0 0 0.5rem 0;
 }
 .digital,
@@ -56,7 +57,6 @@
   box-shadow: 0px 4px 4px rgba(0, 86, 179, 0.1);
   border-radius: 6px;
   padding: 0;
-  margin-bottom: 0.5rem;
 }
 .types-container {
   display: flex;
@@ -119,7 +119,7 @@
   /* height: 130px; */
   text-align: center;
   /* margin-bottom: 0.5rem; */
-  margin-right: 1rem;
+  margin-right: 0.8rem;
 }
 .state-status-gen {
   font-style: normal;
