--- a/src/components/more-details/more-details.css
+++ b/src/components/more-details/more-details.css
@@ -12,7 +12,7 @@
   flex-flow: row;
 }
 .dayo-add {
-  margin: 0 0 0 0.46rem;
+  margin: 0 0 0.5rem 0.46rem;
   /* font-size: 11px; */
   text-align: left;
 }
