--- a/src/components/more-details/more-details.css
+++ b/src/components/more-details/more-details.css
@@ -20,6 +20,7 @@
   margin: 0 0 0.5rem 0.46rem;
   /* font-size: 11px; */
   text-align: left;
+  font-weight: 700;
 }
 .lolo {
   width: 426px;
@@ -58,7 +59,8 @@ p.lolo {
   cursor: pointer;
 }
 
-.live-stream-preview, .image-preview {
+.live-stream-preview,
+.image-preview {
   color: var(--generic-blue);
   font-weight: bolder;
   border-bottom: 2px solid var(--generic-blue);
@@ -66,22 +68,26 @@ p.lolo {
 }
 
 .download-billboard-summary {
-   display: inline-block;
-   width: fit-content;
-   margin-bottom: .79rem;
-   padding: .78rem;
-   background-color: var(--generic-pink);
-   letter-spacing: 1px;
-   font-size: .87rem;
-   border-radius: 10px;
-   border: 0;
-   font-weight: 600;
-   line-height: 12px;
-   white-space: nowrap;
-   color: #fff;
+  display: inline-block;
+  width: fit-content;
+  margin-bottom: 0.79rem;
+  padding: 0.78rem;
+  background-color: var(--generic-pink);
+  letter-spacing: 1px;
+  font-size: 0.87rem;
+  border-radius: 10px;
+  border: 0;
+  font-weight: 600;
+  line-height: 12px;
+  white-space: nowrap;
+  color: #fff;
 }
 
-.download-billboard-summary:hover{
+.download-billboard-summary:hover {
   background-color: var(--generic-pink);
   color: #fff;
+}
+.form-data-style {
+  font-weight: 700;
+  text-transform: capitalize;
 }
