--- a/src/components/side-bar/side-bar.css
+++ b/src/components/side-bar/side-bar.css
@@ -6,15 +6,14 @@
   padding-top: 2rem;
 }
 
-.sidebar-settings {
+/* .sidebar-settings {
   display: flex;
   flex-flow: row nowrap;
-  /* justify-content: space-evenly; */
   padding: 0.59rem 0.79rem;
   color: white;
   text-transform: capitalize;
   cursor: pointer;
-}
+} */
 
 .sidebar-settings > *:first-child {
   padding-left: 1.72rem;
