--- a/src/components/billboard-form/billboard-form.css
+++ b/src/components/billboard-form/billboard-form.css
@@ -15,6 +15,7 @@
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
+  width: 100%;
 }
 .formfont::placeholder {
   height: 14px;
@@ -32,4 +33,7 @@
   font-size: 10px;
   /* margin: 0; */
   text-align: left;
+}
+.hide {
+  display: none;
 }
