--- a/src/components/more-details/more-details.css
+++ b/src/components/more-details/more-details.css
@@ -6,18 +6,21 @@
 .dayo {
   background-color: var(--generic-blue);
   color: white;
-  margin: 5px 0 10px;
-  width: 426px;
+  margin: 10px 0;
+  /* width: 426px; */
   /* height: 44px; */
   box-shadow: 0px 2px 2px rgba(0, 86, 179, 0.1);
   border-radius: 10px;
-  padding: 10px 18px 0 18px;
+  padding: 10px 18px;
   font-size: 15px;
   display: flex;
   flex-flow: row;
 }
+.dayo > p {
+  margin-bottom: 0;
+}
 .dayo-add {
-  margin: 0 0 0.5rem 0.46rem;
+  margin: 0 0 0 0.46rem;
   /* font-size: 11px; */
   text-align: left;
   font-weight: 700;
@@ -62,24 +65,29 @@ p.lolo {
 .live-stream-preview,
 .image-preview {
   color: var(--generic-blue);
-  font-weight: bolder;
+  padding: 0 7px;
+  text-align: center;
   border-bottom: 2px solid var(--generic-blue);
   cursor: default !important;
+  white-space: nowrap;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 26px;
 }
 
 .download-billboard-summary {
   display: inline-block;
   width: fit-content;
   margin-bottom: 0.79rem;
-  padding: 0.78rem;
+  padding: 1rem;
   background-color: var(--generic-pink);
-  letter-spacing: 1px;
   font-size: 0.87rem;
   border-radius: 10px;
   border: 0;
-  font-weight: 600;
-  line-height: 12px;
-  white-space: nowrap;
+  font-weight: 300;
+  line-height: 14px;
+  /* white-space: nowrap; */
   color: #fff;
 }
 
