--- a/src/components/vertical-center-modal/vertical-center-modal.css
+++ b/src/components/vertical-center-modal/vertical-center-modal.css
@@ -46,3 +46,6 @@
   filter: drop-shadow(0px 2px 2px rgba(181, 8, 65, 0.08));
   border-radius: 10px;
 }
+.modal-backdrop {
+  background-color: rgba(0, 87, 179, 0.405);
+}
