states on table to uppercase and height of billboard in more details

--- a/src/components/more-details/more-details.css
+++ b/src/components/more-details/more-details.css
@@ -27,7 +27,7 @@
 }
 .lolo {
   width: 426px;
-  height: 233px;
+  /* height: 233px; */
   /* border: 0.5px solid #0056b3; */
   box-sizing: border-box;
   border-radius: 10px;
