--- a/src/components/billboard-form/billboard-form.css
+++ b/src/components/billboard-form/billboard-form.css
@@ -17,6 +17,22 @@
   font-size: 24px;
   width: 100%;
 }
+.billboardimage-update-btn {
+  background: #0056b3;
+  box-shadow: 0px 2px 2px rgba(181, 8, 65, 0.08);
+  border-radius: 10px;
+  height: 60px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  width: 100%;
+  color: #fff;
+}
+.billboardimage-upload-btn {
+  background-color: #fff;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .formfont::placeholder {
   height: 14px;
   font-size: 14px;
